<resources>
    <string name="app_name">Power2SME</string>
    <string name="google_analytics_tracking_id">UA-34615023-2</string>
	<string name="ga_screenname_TrackingMapActivity">Tracking Map Screen</string>
	<string name="ga_screenname_SplashActivity">Splash Screen</string>
	<string name="ga_screenname_ContainerActivity">Container Screen</string>
	<string name="ga_screenname_AccountUpdatesFragment">Account Updates Screen</string>
	<string name="ga_screenname_ContactInfoEditFragment">Edit Contact Details Screen</string>
	<string name="ga_screenname_HomeFragment">Home Screen</string>
	<string name="ga_screenname_DeliveryAddressesListFragment">Delivery Addresses Screen</string>
	<string name="ga_screenname_DeliveryAddressesInsertFragment">Insert Delivery Address Screen</string>
	<string name="ga_screenname_InterestedCustomerFragment">Interested Customer Screen</string>
	<string name="ga_screenname_DealsFragment">Deals Screen</string>
	<string name="ga_screenname_BuyingRFQsFragment">My RFQs Screen</string>
	<string name="ga_screenname_AddRFQFragment">Add New RFQ Screen</string>
	<string name="ga_screenname_ShipmentDetailsFragment">Shipment Details Screen</string>
	<string name="ga_screenname_BuyingOrdersFragment">My Orders Screen</string>
	<string name="ga_screenname_ServerErrorFragment">Server Error Screen</string>
	<string name="ga_screenname_NoInternetFragment">No Internet Error Screen</string>
	<string name="ga_screenname_MarketPlaceHomeFragment">Market Place Home Screen</string>
	<string name="ga_screenname_LoginSignupFormFragment">Login Signup Form Screen</string>
	<string name="ga_screenname_LoginFragment">Login Screen</string>
	<string name="ga_screenname_WebBrowserFragment">Web Browser Screen</string>
	<string name="ga_screenname_TermsAndConditionsFragment">Terms And Conditions Screen</string>
	<string name="ga_screenname_RateThisAppFragment">Rate This App Screen</string>
	<string name="ga_screenname_PrivacyPolicyFragment">Privacy Policy Screen</string>
	<string name="ga_screenname_AboutUsFragment">About Us Screen</string>
	<string name="ga_screenname_AboutP2SMEFragment">About P2SME Screen</string>
	<string name="ga_screenname_SMENewsDetailsFragment">SME News Details Screen</string>
	<string name="ga_screenname_SMEKhabarFragment">SME Khabar Screen</string>
	<string name="ga_screenname_SignupFragment">Signup Screen</string>
	<string name="ga_screenname_customers_selection">Select SME Screen</string>
	<string name="ga_screenname_contactus">Contact Us Screen</string>
    <string name="facebook_app_id">917464548284081</string>
    <string name="map_api_key">AIzaSyAQeazMOw336_eUsEDBLYBDe3Y6SulECvw</string>
	<string name="drawer_menu_home">Home</string>
	<string name="drawer_menu_login">Login/Register</string>
	<string name="drawer_menu_signup">Signup</string>
	<string name="drawer_menu_logout">Logout</string>
	<string name="drawer_menu_contact_edit">Edit Contact Details</string>
	<string name="drawer_menu_select_customer">Select Customer</string>
	<string name="drawer_menu_contact_us">Contact Us</string>
	<string name="drawer_menu_orders">My Orders</string>
	<string name="drawer_menu_order_reorder">Re-Order</string>
	<string name="drawer_menu_orders_details">My Orders Details</string>
	<string name="drawer_menu_shipment_details">Shipment Details</string>
	<string name="drawer_menu_updates">Account Updates</string>
	<string name="drawer_menu_deals">Deals</string>
	<string name="drawer_menu_deals_post_order">Take This Deal</string>
	<string name="drawer_menu_about_power2sme">About Us</string>
	<string name="drawer_menu_rate_this_app">Rate this App</string>
	<string name="drawer_menu_sme_khabar">SME Khabar</string>
	<string name="drawer_menu_terms_and_condition">Terms &amp; Conditions</string>
	<string name="drawer_menu_rfq">My RFQs</string>
	<string name="drawer_menu_rfq_add">Request for Quote</string>
	<string name="drawer_menu_rfq_details">My RFQ Details</string>
	<string name="drawer_menu_delivery_address_list">My Addresses</string>
	<string name="drawer_menu_delivery_address_add">Add Delivery Address</string>
	<string name="drawer_menu_delivery_address_update">Update Delivery Address</string>
	<string name="drawer_menu_about_us">About Us</string>
	<string name="drawer_menu_privacy_policy">Privacy Policy</string>
	<string name="drawer_menu_market_place_home">Market Place</string>
	<string name="drawer_menu_switch_customer">Switch Customer</string>
    <string name="screen_title_home">Home</string>
    <string name="screen_title_login">Login</string>
	<string name="screen_title_sign_in">SIGN IN</string>
	<string name="screen_title_signup">SIGN UP</string>
    <string name="screen_title_logout">Logout</string>
	<string name="screen_title_contact_edit">Edit Contact Details</string>
	<string name="screen_title_select_customer">Select Customer</string>
    <string name="screen_title_contact_us">Contact Us</string>
	<string name="interested_customer_contact_details">Deal : Express Interest</string>
	<string name="screen_title_orders">My Orders</string>
	<string name="screen_title_order_reorder">Re-Order</string>
	<string name="screen_title_orders_details">My Orders Details</string>
	<string name="screen_title_shipment_details">Shipment Details</string>
	<string name="screen_title_updates">Account Updates</string>
	<string name="screen_title_deals">Deals</string>
	<string name="screen_title_deals_post_order">Take This Deal</string>
	<string name="screen_title_about_power2sme">About Us</string>
	<string name="screen_title_rate_this_app">Rate this App</string>
	<string name="screen_title_sme_khabar">SME Khabar</string>
	<string name="screen_title_terms_and_condition">Terms &amp; Conditions</string>
	<string name="screen_title_rfq">My RFQs</string>
	<string name="screen_title_rfq_add">Request for Quote</string>
	<string name="screen_title_rfq_details">My RFQ Details</string>
	<string name="screen_title_delivery_address_list">My Addresses</string>
	<string name="screen_title_delivery_address_add">Add Delivery Address</string>
	<string name="screen_title_delivery_address_update">Update Delivery Address</string>
	<string name="screen_title_about_us">About Us</string>
	<string name="screen_title_privacy_policy">Privacy Policy</string>
    <string name="screen_title_market_place_home">Market Place</string>
	<string name="screen_title_switch_customer">Switch Customer</string>
    <string name="server_error">Server Error, Please try again!</string>
	<string name="network_not_available">Please Check your Internet Connection and Try Again!</string>
	<string name="server_error_access_forbidden">You are not authorized, Please login again.</string>
	<string name="records_not_found">Records not found!</string>
	<string name="try_again">TRY AGAIN</string>
	<string name="re_try">Retry</string>
	<string name="you_have_not_done_any_transactions_with_us">You have not done any transactions with us</string>
	<string name="please_contact_our_sales_if_you_can_not_see_your_rfq_here">No ongoing Quote requests. You can place one by tapping the button below.</string>
	<string name="order_undelivered_list_empty_message">Looks like you haven\'t placed any orders yet.</string>
	<string name="order_delivered_list_empty_message">No orders found satisfying this criteria</string>
	<string name="empty_meesage_for_account_updates">Looks like you haven\'t done any transactions with us yet.</string>
	<string name="no_result_found">No Result Found.</string>
	<string name="user_delivery_address_message">Save your delivery locations to place your order faster!</string>
	<string name="your_account_statement_will_be_sent_within_48_hours_">Your account statement will be sent within 48 hours.</string>
    <string name="inr">\u20A8</string>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="file_picker_regex_pattern">*/*</string>
	<string name="image_capture_tmp_file_name">tmp.png</string>
    <string name="please_wait">Please wait...</string>
	<string name="contact_us">Contact Us</string>
	<string name="change_password">Change Password</string>
	<string name="auth_dlg_title_email_already_exist">Your email already exist, please login first!</string>
	<string name="auth_dlg_title_session_expired_login_again">Your session has expired, please login again!</string>
	<string name="logout_conformation_dlg_title">Do you want to logout?</string>
	<string name="label_login">LOGIN</string>
	<string name="label_cancel">CANCEL</string>
	<string name="label_ok">OK</string>
	<string name="label_continue">CONTINUE</string>
	<string name="social_logins_label">OR SIGN IN WITH </string>
	<string name="login_hint_emailid">Email ID&#42;</string>
	<string name="login_validationerror_emailid">Please enter valid email id.</string>
	<string name="login_validationerror_empty_emailid">Please enter email id.</string>
	<string name="login_hint_password">Password&#42;</string>
	<string name="login_validationerror_password">Please enter valid password.</string>
	<string name="login_validationerror_empty_password">Please enter password.</string>
	<string name="login_response_error">Please check email and password.</string>
	<string name="login_label_inputdialogmsg">Type Your Message :</string>
	<string name="login_label_forgotpasswrd"><u>Forgot Password?</u></string>
	<string name="login_button_google_login">"     LOG IN WITH GOOGLE"</string>
    <string name="login_button_linkedin_login">"     LOG IN WITH LINKEDIN"</string>
	<string name="login_button_facebook_login">"  LOG IN WITH FACEBOOK"</string>
	<string name="error_forgot_password">Please Check your Internet Connection and Try Again!</string>
	<string name="fb_login_error">Facebook user id or password is wrong, please try again.</string>
	<string name="google_login_error">Google user id or password is wrong, please try again.</string>
	<string name="please_enter_registered_email_id">Please enter registered Email-ID:</string>
	<string name="chnage_password_label">Change Password:</string>
	<string name="invalid_login_credentials">Please check your email-id / password</string>
	<string name="addrfq_hint_companyname">Your Company Name&#42;</string>
	<string name="addrfq_hint_fullname">Your Full Name</string>
	<string name="addrfq_hint_mobilenumber">Your 10 Digit Mobile Number&#42;</string>
	<string name="addrfq_hint_emailid">Your Email ID&#42;</string>
	<string name="myrfqs_label_quoteid">"Quote ID: "</string>
	<string name="myrfqs_label_quotedate">"Quote Date: "</string>
	<string name="myrfqs_label_taxation">"Taxation: "</string>
	<string name="myrfqs_label_total">"Total: "</string>
	<string name="myrfqs_label_status">"Status: "</string>
	<string name="myrfqs_button_calus">CALL US</string>
	<string name="myrfqs_button_accept">ACCEPT</string>
	<string name="myrfqs_button_uploadpo">UPLOAD PO</string>
	<string name="addshippingaddress_hint_addressline1">Address Line 1&#42;</string>
	<string name="addshippingaddress_hint_addressline2">Address Line 2</string>
	<string name="addshippingaddress_hint_pincode">Pincode&#42;</string>
	<string name="addshippingaddress_button_submit">SUBMIT</string>
	<string name="aboutus_label_aboutp2s">About Power2SME</string>
	<string name="aboutus_label_privacypolicy">Privacy Policy</string>
	<string name="aboutus_label_termsandcondition">Terms And Conditions</string>
	<string name="aboutus_label_ratethisapp">Rate This App</string>
	<string name="splash_domain_selector_dialog_help">Format: http://&lt;host&gt;:&lt;string&gt;/&lt;Prefix before /verNumber&gt;\nEg. Http://192.168.1.12:8080/p2sapi</string>
	<string name="splash_domain_selector_dialog_edittext_hint">Enter URL as in given format</string>
	<string name="splash_domain_selector_dialog_rediobutton_live">Live</string>
	<string name="splash_domain_selector_dialog_rediobutton_uat">UAT</string>
	<string name="splash_domain_selector_dialog_rediobutton_custom">Custom</string>
</resources>