<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp13" android:visible="true">
        <item
            android:id="@+id/drawer_menu_item_chat"
            android:icon="@drawable/chat_icon"
            android:title="Chat"
            />
    </group>
    <group android:id="@+id/grp2">
        <item
            android:id="@+id/drawer_menu_item_add_new_rfq"
            android:icon="@drawable/menu_icon_add_new_rfq"
            android:title="@string/drawer_menu_rfq_add"
            />
    </group>
    <group android:id="@+id/grp3">
        <item
            android:id="@+id/drawer_menu_item_account_updates"
            android:icon="@drawable/menu_icon_updates"
            android:title="@string/drawer_menu_updates"
            />
    </group>
    <group android:id="@+id/grp4" android:visible="false">
        <item
            android:id="@+id/drawer_menu_item_deals"
            android:icon="@drawable/menu_icon_deals"
            android:title="@string/drawer_menu_deals"
            />
    </group>
    <group android:id="@+id/grp5">
        <item
            android:id="@+id/drawer_menu_item_myrfq"
            android:icon="@drawable/menu_icon_rfq"
            android:title="@string/drawer_menu_rfq"
            />
    </group>
    <group android:id="@+id/grp6">
        <item
            android:id="@+id/drawer_menu_item_myorders"
            android:icon="@drawable/menu_icon_myorders"
            android:title="@string/drawer_menu_orders"
            />
    </group>
    <group android:id="@+id/grp7">
        <item
            android:id="@+id/drawer_menu_item_shipping_address"
            android:icon="@drawable/menu_icon_address"
            android:title="@string/drawer_menu_delivery_address_list"
            />
    </group>

    <group android:id="@+id/grp8">
        <item
            android:id="@+id/drawer_menu_item_switch_customer"
            android:icon="@drawable/switch_user"
            android:title="@string/drawer_menu_switch_customer"
            />
    </group>

    <group android:id="@+id/grp9">
        <item
            android:id="@+id/drawer_menu_item_logout"
            android:icon="@drawable/menu_icon_logout"
            android:title="@string/drawer_menu_logout"
            />
    </group>
</menu>