<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/TextView_aboutPower2SME"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:minHeight="@dimen/aboutus_min_rows_height"
    	android:text="@string/aboutus_label_aboutp2s"
    	style="@style/Style_TextView_title"
    	android:gravity="center_vertical"
    	android:paddingLeft="@dimen/page_left_padding"
    	android:paddingRight="@dimen/page_right_padding"
        />
    <View 
        android:layout_width="match_parent"
    	android:layout_height="@dimen/divider_height_first_level"
    	style="@style/Style_View_divider"
        />
    <TextView 
        android:id="@+id/TextView_privacyPolicy"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:minHeight="@dimen/aboutus_min_rows_height"
    	android:text="@string/aboutus_label_privacypolicy"
    	style="@style/Style_TextView_title"
    	android:gravity="center_vertical"
    	android:paddingLeft="@dimen/page_left_padding"
    	android:paddingRight="@dimen/page_right_padding"
        />
    <View 
        android:layout_width="match_parent"
    	android:layout_height="@dimen/divider_height_first_level"
    	style="@style/Style_View_divider"
        />
    <TextView 
        android:id="@+id/TextView_termsAndConditions"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:minHeight="@dimen/aboutus_min_rows_height"
    	android:text="@string/aboutus_label_termsandcondition"
    	style="@style/Style_TextView_title"
    	android:gravity="center_vertical"
    	android:paddingLeft="@dimen/page_left_padding"
    	android:paddingRight="@dimen/page_right_padding"
        />
    <View 
        android:layout_width="match_parent"
    	android:layout_height="@dimen/divider_height_first_level"
    	style="@style/Style_View_divider"
        />
    <TextView 
        android:id="@+id/TextView_rateThisApp"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:minHeight="@dimen/aboutus_min_rows_height"
    	android:text="@string/aboutus_label_ratethisapp"
    	style="@style/Style_TextView_title"
    	android:gravity="center_vertical"
    	android:paddingLeft="@dimen/page_left_padding"
    	android:paddingRight="@dimen/page_right_padding"
        />
    <View 
        android:layout_width="match_parent"
    	android:layout_height="@dimen/divider_height_first_level"
    	style="@style/Style_View_divider"
        />
</LinearLayout>
