<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/superRootLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg_color"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/rootContainerScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/page_left_padding"
            android:paddingRight="@dimen/page_right_padding" >

            <EditText
                android:id="@+id/EditText_adress"
                style="@style/Style_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_two_vertical_component"
                android:hint="@string/addshippingaddress_hint_addressline1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="3" />

            <EditText
                android:id="@+id/EditText_adress2"
                style="@style/Style_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_two_vertical_component"
                android:hint="@string/addshippingaddress_hint_addressline2"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="3" />



            <EditText
                android:id="@+id/EditText_postCode"
                style="@style/Style_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_two_vertical_component"
                android:hint="@string/addshippingaddress_hint_pincode"
                android:imeOptions="actionDone"
                android:inputType="number" />

            <Button
                android:id="@+id/Button_submit"
                style="@style/Style_Button_SquareYellow"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_between_two_vertical_component"
                android:layout_marginLeft="@dimen/page_left_padding"
                android:layout_marginRight="@dimen/page_right_padding"
                android:text="@string/addshippingaddress_button_submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
